# agent-memory

./: .gitignore  LICENSE  README.md  install.sh  pyproject.toml
.claude-plugin/: marketplace.json
.github/workflows/: release.yml
benchmark_corpus/: README.md
docs/: RELEASING.md
homebrew-tap/Formula/: agent-memory.rb
plugins/agent-memory/: README.md
pyinstaller/: _entrypoint.py  agent-memory.spec
scripts/: benchmark_recall_hotpath.py  build_benchmark_corpus.py  build_wikipedia_cache.py  compare_graph_vs_raw.py  compare_isolated_agents.py  dev-install-shim.sh  eval_wikipedia.py  install.sh  prepare_codex_benchmark.py  probe_single_case.py  render_codex_skill_benchmark.py  run_cosine_agent.py  run_graph_agent.py  run_openai_skill_benchmark.py  run_raw_agent.py  tune_wikipedia_benchmark.py
skills/agent-memory-audit/: SKILL.md
skills/agent-memory-consolidate/: SKILL.md
skills/codex-skill-benchmark-orchestrator/: SKILL.md
skills/graph-benchmark-answer/: SKILL.md
skills/raw-file-benchmark-answer/: SKILL.md
src/agent_memory/: __init__.py  benchmark.py  cli.py  config.py  embeddings.py  end_to_end.py  engine.py  integration.py  legacy_memory.py  mcp_server.py  models.py  (+15 more)
tests/: conftest.py  test_claude_hooks.py  test_claude_stop_capture.py  test_cli.py  test_codex_hooks.py  test_codex_stop_capture.py  test_config.py  test_engine.py  test_integration.py  test_operations_log.py  test_plugin_wrapper.py  test_project_registry.py  test_repo_ingest.py  test_retrieval_feedback.py  test_smoke_test.py  test_upgrade.py  test_versioning.py  test_write_lock.py
(+15 files in other folders)
